--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1303,7 +1303,8 @@ footer a:hover {
 
   .header-principal {
     font-size: 1.8em;
-    margin-top: 15px;/* Ajusta el tamaño de la fuente principal */
+    margin-top: 15px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);/* Ajusta el tamaño de la fuente principal */
   }
 
   .header-subtitulo {
